Bug 150181 - Fix some typos in comments.
Summary: Fix some typos in comments.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mark Lam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-15 12:27 PDT by Mark Lam
Modified: 2015-10-15 12:33 PDT (History)
1 user (show)

See Also:


Attachments
Patch for landing. (3.82 KB, patch)
2015-10-15 12:30 PDT, Mark Lam
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Lam 2015-10-15 12:27:52 PDT
Patch coming.
Comment 1 Mark Lam 2015-10-15 12:30:20 PDT
Created attachment 263179 [details]
Patch for landing.
Comment 2 Mark Lam 2015-10-15 12:33:08 PDT
Previously rubber stamped by Michael Saboff in https://bugs.webkit.org/show_bug.cgi?id=150128.  Landed in r191125: <http://trac.webkit.org/r191125>.