Fix some typos in comments. https://bugs.webkit.org/show_bug.cgi?id=150181

Rubber stamped by Michael Saboff.

* jit/JITStubsARM.h:
* jit/JITStubsARMv7.h:



Canonical link: https://commits.webkit.org/168311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191125 268f45cc-cd09-0410-ab3c-d52691b4dbfc